--- a/composer.json
+++ b/composer.json
@@ -85,7 +85,7 @@
     },
     "require-dev": {
         "doctrine/doctrine-fixtures-bundle": "^3.4",
-        "fzaninotto/faker": "^1.5",
+        "fakerphp/faker": "^1.19",
         "phpspec/phpspec": "^7.2",
         "symfony/maker-bundle": "^1.38",
         "symfony/stopwatch": "6.0.*",
