Update the operations for the user resource

--- a/config/api_platform/resources/user.yaml
+++ b/config/api_platform/resources/user.yaml
@@ -4,4 +4,7 @@ App\Entity\User:
     input: App\DTO\UserInput
     output: App\DTO\UserOutput
   collectionOperations: ~
-  itemOperations: ~
+  itemOperations:
+    get: ~
+    patch: ~
+    delete: ~
