Update product resource persistence and tests

--- a/config/api_platform/resources/product.yaml
+++ b/config/api_platform/resources/product.yaml
@@ -4,4 +4,7 @@ App\Entity\Product:
     input: App\DTO\ProductInput
     output: App\DTO\ProductOutput
   collectionOperations: ~
-  itemOperations: ~
+  itemOperations:
+    get: ~
+    patch: ~
+    delete: ~
