Update container configs

--- a/container/site.conf
+++ b/container/site.conf
@@ -4,6 +4,12 @@
     DocumentRoot /var/www/html/my-api-platform/public
     DirectoryIndex /index.php
 
+    <Directory /var/www/html>
+        Options Indexes FollowSymLinks
+        AllowOverride All
+        Require all granted
+    </Directory>
+
     <Directory /var/www/html/my-api-platform/public>
         AllowOverride All
         Order Allow,Deny
