--- a/container/xdebug.ini
+++ b/container/xdebug.ini
@@ -1,7 +1,7 @@
-xdebug.idekey=docker
-xdebug.client_port=9003
+; zend_extension=xdebug.so
 xdebug.mode=debug
-xdebug.remote_handler=dbgp
 xdebug.start_with_request=yes
-; change to your ip - don't commit changes
 xdebug.client_host=192.168.1.75
+xdebug.client_port=9003
+xdebug.idekey=docker
+xdebug.log=/tmp/xdebug.log
