--- a/config/api_platform/resources/User.yaml
+++ b/config/api_platform/resources/User.yaml
@@ -1,6 +1,10 @@
 ---
 App\Entity\User:
   attributes:
+    normalization_context:
+      groups: ['user:read']
+    # denormalization_context:
+    #   groups: ['user:write']
     input: App\DTO\UserInput
     output: App\DTO\UserOutput
   collectionOperations: ~
