--- a/config/packages/framework.yaml
+++ b/config/packages/framework.yaml
@@ -17,6 +17,10 @@ framework:
     php_errors:
         log: true
 
+    serializer:
+        mapping:
+            paths: ['%kernel.project_dir%/config/serialization']
+
 when@test:
     framework:
         test: true
